# downdetector

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml  config.default.toml  config.example.toml  config.toml  dockerfile
.github/workflows/: ci-cd.yaml  ci.yaml  deploy.yaml
src/: config.rs  error.rs  errors.rs  lib.rs  main.rs  process.rs  worker.rs
