[package]
name = "downdetector"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.8.22"
url = "2.5.4"
