[package]
name = "downdetector"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.12.26", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
toml = "0.9.10"
url = "2.5.7"
